--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/responsive.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
     <title>Harry Potter</title>
 </head>
 <body>
     <main class="personagens">
-        <div class="personagem selecionado" id="harry">
-            <img class="imagem" src="../images/heurii.jpg" alt="Harry Potter">
+        <div class="personagem selecionado" >
+            <img class="imagem" src="images/heurii.jpg" alt="Harry Potter">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Harry Potter</h2>
@@ -25,8 +25,8 @@
             </div>
         </div>
 
-        <div class="personagem" id="draco">
-            <img class="imagem" src="../images/dracoooooo.jpg" alt="Draco Malfoy">
+        <div class="personagem" >
+            <img class="imagem" src="images/dracoooooo.jpg" alt="Draco Malfoy">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Draco Malfoy</h2>
@@ -34,8 +34,8 @@
             </div>
         </div>
 
-        <div class="personagem" id="luna">
-            <img class="imagem" src="../images/lunaaaaaaaaa.jpg" alt="Luna Lovegood">
+        <div class="personagem">
+            <img class="imagem" src="images/lunaaaaaaaaa.jpg" alt="Luna Lovegood">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Luna Lovegood</h2>
@@ -43,8 +43,8 @@
             </div>
         </div>
 
-        <div class="personagem" id="cedrico">
-            <img class="imagem" src="../images/cedricc.jpg" alt="Cedrico Diggory">
+        <div class="personagem" >
+            <img class="imagem" src="images/cedricc.jpg" alt="Cedrico Diggory">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Cedrico Diggory</h2>
@@ -56,26 +56,26 @@
     <ul class="botoes">
     <li>
         <button class="botao selecionado">
-            <img src="../images/Gryffindor-Logo.png" alt="Grifinória">
+            <img src="images/Gryffindor-Logo.png" alt="Grifinória">
         </button>
     </li>
     <li>
         <button class="botao">
-            <img src="../images/Slytherin-Logo.png" alt="Sonserina">
+            <img src="images/Slytherin-Logo.png" alt="Sonserina">
         </button>
     </li>
     <li>
         <button class="botao">
-            <img src="../images/Ravenclaw-Logo.png" alt="Corvinal">
+            <img src="images/Ravenclaw-Logo.png" alt="Corvinal">
         </button>
     </li>
     <li>
         <button class="botao">
-            <img src="../images/Hufflepuff-Logo.png" alt="Lufa-Lufa">
+            <img src="images/Hufflepuff-Logo.png" alt="Lufa-Lufa">
         </button>
     </li>
 </ul>
 
-<script src="../JS/script.js"></script>
+<script src="JS/script.js"></script>
 </body>
 </html>
